Fix double border for table

--- a/diapers/static/diapers/css/cover_product.css
+++ b/diapers/static/diapers/css/cover_product.css
@@ -217,7 +217,7 @@ table {
     border-radius: 10px;
     opacity: 0.8;
     border: 1px solid white;
-    border-collapse: separate;
+    border-collapse: collapse;
     line-height: 30px;
 
 }
